# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  main.yml
gendiff/: __init__.py  generate_diff.py
gendiff/scripts/: gendiff.py
